--- a/index.html
+++ b/index.html
@@ -326,16 +326,17 @@
                             /*
                            
                             */
+                             var disqus_config = function () {
+                            this.page.url = https://adamcahyoningrat29.github.io/Naruhina-Wedding/;  // Replace PAGE_URL with your page's canonical URL variable
+                            this.page.identifier = 1; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                            };
                             (function() { // DON'T EDIT BELOW THIS LINE
                             var d = document, s = d.createElement('script');
                             s.src = 'https://naruhina-wedding-4.disqus.com/embed.js';
                             s.setAttribute('data-timestamp', +new Date());
                             (d.head || d.body).appendChild(s);
                             })();
-                            //  var disqus_config = function () {
-                            // this.page.url = https://adamcahyoningrat29.github.io/Naruhina-Wedding/;  // Replace PAGE_URL with your page's canonical URL variable
-                            // this.page.identifier = 1; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                            // };
+                            
                         </script>
                         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                 </div>
