--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
         function playAudio(){
             audioIconWrapper.style.display = 'flex';
             audioPause.style.display = 'none';
+            song.volume = 0.1;
             song.play();
             isPlaying = true;
         }
